# Frigg

./: .gitignore  config-example.yaml  frigg.ini  pyproject.toml  requirements.txt  wsgi.py
frigg/: __init__.py  app.py  auth.py  config-example.yaml  config.py  data.py  db.py  ddns.py  frigg-cli.py  frigg.py  frigg_cli.py  main.py  push.py  route.py  var.py
frigg/data-example/: auth.yaml  config.yaml
frigg/var-example/: dfs-commit
tests/: run-server.sh
